packages/typ/tests/fixtures/diagnostics/0298_fun_polymorphic_record_field_mismatch_06.ml
type poly_zeta = { run_zeta : 'a. 'a -> 'a }
let bad_zeta : poly_zeta = { run_zeta = fun _ -> 5 }
